# mentha-app

./: .gitignore  README.md  docker-compose.yml
api/: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
api/alembic-mentha-db/: README  env.py
api/alembic-mentha-db/versions/: 0d96f8fad2f8_setup_rule_table.py  268ac3d0dc3f_setup_account_table.py  3febb33a8c51_add_rule_match_type_column.py  610a1f4d0f42_setup_transaction_table.py  93bb3ea3a054_setup_budget_table.py  a18c8679d98e_setup_institution_table.py  a42c1a1a0b18_setup_category_table.py  c20f1b59dde0_setup_user_table.py  c4624a27980b_add_transaction_type_column.py  fe4f19e14d1a_add_institution_trans_fit_id_pat_column.py
api/app/: constants.py  core.py  main.py
api/app/domain/: account.py  budget.py  category.py  core.py  institution.py  rule.py  transaction.py  trend.py  user.py
api/app/routes/: account.py  budget.py  category.py  institution.py  router.py  rule.py  transaction.py  trend.py  utils.py
api/app/storage/: db.py  importer.py  ofx.py  utils.py
api/scripts/: backupdb.sh  restoredb.sh
api/tests/: conftest.py  test_budget.py  test_ofx.py  test_route_utils.py  test_rule.py  test_transaction.py  test_validations.py
api/tests/routes/: test_category.py
api/tests/samples/: acct_trns.ofx  acct_trns_newlines.ofx
api/typings/dateutil/: relativedelta.pyi
client/: README.md  jest.config.mjs  package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx  providers.tsx
client/src/components/: Form.tsx  (+13 more)
client/tests/: schemas.shared.test.tsx
(+23 files in other folders)
