[tool.poetry]
name = "mentha-api"
version = "0.1.0"
description = ""
authors = ["Chris Larabee <chris.larabee9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
psycopg = {extras = ["binary"], version = "^3.1.12"}
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
